@@ -358,6 +358,8 @@ Library
 Extension Modules
 -----------------
 
+- Issue #10169: Fix argument parsing in socket.sendto() to avoid error masking.
+
 - Issue #12017: Fix segfault in json.loads() while decoding highly-nested
   objects using the C accelerations.
 
